MH and followups title and alignment issue

--- a/src/app/dashboards/morning-huddle/morning-huddle.component.css
+++ b/src/app/dashboards/morning-huddle/morning-huddle.component.css
@@ -89,7 +89,7 @@ table{
  width: 100%;
 }
 
-/* .mat-column-name {
+ .mat-column-name {
   word-wrap: break-word !important;
   white-space: unset !important;
   flex: 0 0 20% !important;
@@ -107,8 +107,8 @@ table{
 .mat-column-phone {
   word-wrap: break-word !important;
   white-space: unset !important;
-  flex: 0 0 20% !important;
-  width: 20% !important;
+  flex: 0 0 15% !important;
+  width: 15% !important;
   overflow-wrap: break-word;
   word-wrap: break-word;
   word-break: break-word;
@@ -116,7 +116,7 @@ table{
   -moz-hyphens: auto;
   -webkit-hyphens: auto;
   hyphens: auto;
-} */
+} 
 
 
 /*.customWidth.PostOp .mat-column-name {
@@ -147,12 +147,12 @@ table{
   -webkit-hyphens: auto;
   hyphens: auto;
 }
-
-.mat-column-note,.mat-column-date {
+*/
+.mat-column-note,.mat-column-date,.mat-column-dentist {
   word-wrap: break-word !important;
   white-space: unset !important;
-  flex: 0 020% !important;
-  width: 20% !important;
+  flex: 0 0 15% !important;
+  width: 15% !important;
   overflow-wrap: break-word;
   word-wrap: break-word;
   word-break: break-word;
@@ -160,8 +160,15 @@ table{
   -moz-hyphens: auto;
   -webkit-hyphens: auto;
   hyphens: auto;
-}*/
-.mat-column-status {
+}
+.PostOp .mat-column-dentist {
+    flex: 0 0 25% !important;
+    width: 25% !important; 
+}
+.mat-footer-cell {
+    position: absolute;
+}
+/*.mat-column-status {
   word-wrap: break-word !important;
   white-space: unset !important;
   flex: 0 0 20% !important;
@@ -232,7 +239,7 @@ table{
     width: max-content !important;
 }
 
-.thick .mat-column-status {
+ .mat-column-status {
   flex: 0 0 10% !important;
   width: 10% !important;
 }
